--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -58,6 +58,7 @@ jobs:
               --username=testuser \
               --password=testpassword \
               --changeLogFile=$CHANGELOG_FILE \
+              --license-key=${{secrets.LIQUIBASE_LICENSEKEY}}
               connect
         done
 
