--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: 
       - main
-    paths:
-      - 'dbscripts/**'
+#    paths:
+#      - 'dbscripts/**'
 
 jobs:
   migrate:
@@ -50,7 +50,7 @@ jobs:
         LIQUIBASE_IMAGE="liquibase/liquibase"
         CHANGELOG_FILE="/liquibase/changelog/change.sql"
         URL_PREFIX="jdbc:mysql://mysql-db:3306/"
-
+        
         for db in schema1 schema2 schema3 schema4 schema5 schema6 schema7 schema8 schema9 schema10; do
             echo "Running Liquibase migration on database: $db"
             docker run --rm --network host -v $GITHUB_WORKSPACE/dbscripts:/liquibase/changelog $LIQUIBASE_IMAGE \
@@ -58,8 +58,8 @@ jobs:
               --username=testuser \
               --password=testpassword \
               --changeLogFile=$CHANGELOG_FILE \
-              --license-key=${{secrets.LIQUIBASE_LICENSEKEY}}
-              connect
+              --license-key=${{secrets.LIQUIBASE_LICENSEKEY}} \
+              validate
         done
 
     - name: Display All Databases and Users Table Schema
