--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -50,23 +50,22 @@ jobs:
         LIQUIBASE_IMAGE="liquibase/liquibase"
         CHANGELOG_FILE="/liquibase/changelog/change.sql"
         URL_PREFIX="jdbc:mysql://mysql-db:3306/schema1"
-		
-		docker run --rm --network host -v $GITHUB_WORKSPACE/dbscripts:/liquibase/changelog $LIQUIBASE_IMAGE \
-              --url="${URL_PREFIX}" \
-              --username=testuser \
-              --password=testpassword \
-              --changeLogFile=$CHANGELOG_FILE \
-			  --license-key=${{secrets.LIQUIBASE_LICENSEKEY}} \
-			  --driver=com.mysql.cj.jdbc.Driver \
-              connect
+        
+        docker run --rm --network host -v $GITHUB_WORKSPACE/dbscripts:/liquibase/changelog $LIQUIBASE_IMAGE \
+          --url="${URL_PREFIX}" \
+          --username=testuser \
+          --password=testpassword \
+          --changeLogFile=$CHANGELOG_FILE \
+          --license-key=${{ secrets.LIQUIBASE_LICENSEKEY }} \
+          --driver=${{ secrets.MYSQL_DRIVER }} \
+          connect
 
     - name: Run Liquibase & check status
       run: |
         LIQUIBASE_IMAGE="liquibase/liquibase"
         CHANGELOG_FILE="/liquibase/changelog/change.sql"
         URL_PREFIX="jdbc:mysql://mysql-db:3306/"
-		
-
+        
         for db in schema1 schema2 schema3 schema4 schema5 schema6 schema7 schema8 schema9 schema10; do
             echo "Running Liquibase migration on database: $db"
             docker run --rm --network host -v $GITHUB_WORKSPACE/dbscripts:/liquibase/changelog $LIQUIBASE_IMAGE \
@@ -74,8 +73,8 @@ jobs:
               --username=testuser \
               --password=testpassword \
               --changeLogFile=$CHANGELOG_FILE \
-			  --license-key=${{secrets.LIQUIBASE_LICENSEKEY}} \
-			  --driver=com.mysql.cj.jdbc.Driver \
+              --license-key=${{ secrets.LIQUIBASE_LICENSEKEY }} \
+              --driver=com.mysql.cj.jdbc.Driver \
               status
         done
 
