--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -49,19 +49,18 @@ jobs:
       run: |
         LIQUIBASE_IMAGE="liquibase/liquibase"
         CHANGELOG_FILE="/liquibase/changelog/change.sql"
-        URL_PREFIX="jdbc:mysql://mysql-db:3306/"
+        URL_PREFIX="jdbc:mysql://mysql-db:3306/schema1"
         
-        for db in schema1 schema2 schema3 schema4 schema5 schema6 schema7 schema8 schema9 schema10; do
-            echo "Running Liquibase migration on database: $db"
+        
             docker run --rm --network host -v $GITHUB_WORKSPACE/dbscripts:/liquibase/changelog $LIQUIBASE_IMAGE \
-              --url="${URL_PREFIX}${db}" \
+              --url="${URL_PREFIX}" \
               --username=testuser \
               --password=testpassword \
               --changeLogFile=$CHANGELOG_FILE \
               --license-key=${{secrets.LIQUIBASE_LICENSEKEY}} \
              # --driver=com.mysql.cj.jdbc.Driver \
-              validate
-        done
+              connect
+        
 
     - name: Display All Databases and Users Table Schema
       run: |
