--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql:8.0-cj
+        image: mysql:8.0
         ports:
           - 3306:3306
         env:
