--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -9,25 +9,21 @@ jobs:
   migrate:
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:8.0
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-          MYSQL_USER: testuser
-          MYSQL_PASSWORD: testpassword
-        options: >-
-          --name mysql-db
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Create Docker Network
+      run: docker network create my-network
+
+    - name: Start MySQL Service
+      run: |
+        docker run -d --name mysql-db --network my-network \
+          -e MYSQL_ROOT_PASSWORD=rootpassword \
+          -e MYSQL_USER=testuser \
+          -e MYSQL_PASSWORD=testpassword \
+          -e MYSQL_DATABASE=schema1 \
+          mysql:8.0
 
     - name: Wait for MySQL to be ready
       run: |
@@ -38,29 +34,16 @@ jobs:
           echo 'MySQL not ready yet...'
           sleep 1
         done
-    
+
     - name: Initialize Database Schemas and Grant Permissions
       run: |
         docker exec -i mysql-db mysql -u root -prootpassword < $GITHUB_WORKSPACE/init.sql
-
-    - name: Display All Databases and Users Table Schema
-      run: |
-        echo "Listing all databases and 'users' table schema for each database:"
-        for db in schema1 schema2 schema3 schema4 schema5 schema6 schema7 schema8 schema9 schema10; do
-            echo "Checking database: $db"
-            docker exec -i mysql-db mysql -u testuser -ptestpassword -e "USE $db; SHOW CREATE TABLE users;"
-        done    
-
-    - name: Ceating docker network
-      run: |
-         docker network create my-network
 
     - name: Download MySQL JDBC Driver
       run: |
         curl -L -o mysql-connector-java.jar https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.32/mysql-connector-java-8.0.32.jar
         ls -l mysql-connector-java.jar
-        
-        
+
     - name: Run Liquibase migrations
       run: |
         LIQUIBASE_IMAGE="ashwinsirigi/liquibase-mysql-driver"
@@ -77,7 +60,7 @@ jobs:
           --classpath=/liquibase/lib/mysql-connector-java.jar \
           --license-key=${LIQUIBASE_LICENSEKEY} \
           --driver=${DB_DRIVER} \
-          connect
+          update
 
     - name: Display All Databases and Users Table Schema
       run: |
@@ -86,3 +69,6 @@ jobs:
           echo "Checking database: $db"
           docker exec -i mysql-db mysql -u testuser -ptestpassword -e "USE $db; SHOW CREATE TABLE users;"
         done
+
+    - name: Remove Docker Network
+      run: docker network rm my-network
