--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -62,8 +62,10 @@ jobs:
       run: |
         LIQUIBASE_IMAGE="ashwinsirigi/liquibase-mysql-driver"
         CHANGELOG_FILE="/liquibase/changelog/change.sql"
-        docker inspect mysql-db | grep '"IPAddress": ' 
-        dockerhost=$(docker inspect mysql-db | grep '"IPAddress": ' | cut -d':' -f2 | tr -d ' ' | tr -d "," |tr  -d '"' | head -n 1)
+        #docker inspect mysql-db | grep '"IPAddress": ' 
+        docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' mysql-db
+        #dockerhost=$(docker inspect mysql-db | grep '"IPAddress": ' | cut -d':' -f2 | tr -d ' ' | tr -d "," |tr  -d '"' | head -n 1)
+        dockerhost=$(docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' mysql-db)
         echo $dockerhost
         URL_PREFIX="jdbc:mysql://$dockerhost:3306/schema1"
         echo $URL_PREFIX
