--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -33,8 +33,8 @@ jobs:
 
     - name: Wait for MySQL to be ready
       run: |
-        for i in {30..0}; do
-          if docker exec mysql-db mysql -u testuser -ptestpassword -e "SELECT 1" > /dev/null 2>&1; then
+        for i in {180..0}; do
+          if docker exec mysql-db mysql -u root -prootpassword -e "SELECT 1" > /dev/null 2>&1; then
             break
           fi
           echo 'MySQL not ready yet...'
