--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         for i in {180..0}; do
           if docker exec mysql-db mysql -u root -prootpassword -e "SELECT 1" > /dev/null 2>&1; then
+            echo 'MySQL is connecting'
             break
           fi
           echo 'MySQL not ready yet...'
