--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -3,7 +3,7 @@ name: Database Migration
 on: 
   push:
     branches: 
-      - mysql_cicd_update1
+      - main
  #   paths:
  #     - '/dbscripts/deploy/**'
 
