--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -44,15 +44,22 @@ jobs:
     - name: Initialize Database Schemas and Grant Permissions
       run: docker exec -i mysql-db mysql -u root -prootpassword < $GITHUB_WORKSPACE/init.sql; 
        echo "Database Restoration Completed"
- 
+
+    - name: Display All Databases and Users Table Schema
+      run: |
+        echo "Listing all databases and 'users' table schema for each database:"
+        for db in schema1 schema2 schema3 schema4 schema5 schema6 schema7 schema8 schema9 schema10; do
+          echo "Checking database: $db"
+          docker exec -i mysql-db mysql -u testuser -ptestpassword -e "USE $db; SHOW CREATE TABLE users;"
+        done    
 
     - name: Verify change.sql file exists
       run: |
-        if [ ! -f "$GITHUB_WORKSPACE/masterChangeLog.xml" ]; then
+        if [ ! -f "$GITHUB_WORKSPACE/dbscripts/change.sql" ]; then
           echo "change.sql file not found!"
           exit 1
         else
-          echo "change.sql file exists $GITHUB_WORKSPACE/masterChangeLog.xml"
+          echo "change.sql file exists $GITHUB_WORKSPACE/dbscripts/change.sql"
         fi      
         
     - name: Run Liquibase connection test
@@ -75,4 +82,4 @@ jobs:
           --license-key=${LIQUIBASE_LICENSEKEY} \
           status
 
-        
+  
