--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -72,7 +72,7 @@ jobs:
         
         docker run  -e INSTALL_MYSQL=true --rm --network my-network \
         -v $GITHUB_WORKSPACE/dbscripts:/liquibase/changelog \
-        -v $GITHUB_WORKSPACE/masterChangeLog.xml:/liquibase/changelog.xml \
+         #-v $GITHUB_WORKSPACE/masterChangeLog.xml:/liquibase/changelog.xml \
         -v $(pwd)/mysql-connector-java.jar:/liquibase/lib/mysql-connector-java.jar $LIQUIBASE_IMAGE \
           --changeLogFile=${CHANGELOG_FILE} \
           --url="${URL_PREFIX}" \
