--- a/.github/workflows/mysql_cicd.yml
+++ b/.github/workflows/mysql_cicd.yml
@@ -79,6 +79,6 @@ jobs:
           --password=rootpassword \
           --classpath=/liquibase/lib/mysql-connector-java.jar \
           --license-key=${LIQUIBASE_LICENSEKEY} \
-          connect
+          updateSQL
 
   
